--- a/public/custom/css/custom.css
+++ b/public/custom/css/custom.css
@@ -295,3 +295,9 @@
     width: 300px!important;
     border-radius: 10px!important;
 }
+
+/* font all tabel */
+.table, .jsgrid .jsgrid-table {
+    margin-bottom: 0;
+    color: #e9e9e9!important;
+}
